# scaffold-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/: dependabot.yaml  docs.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
docs/: Dockerfile  app.yaml  conf.py  index.rst
docs/usage/: contribute.rst  examples.rst  installation.rst  subpackages.rst
docs/usage/examples/: hydra_entrypoint.rst
docs/usage/hydra_flyte_launcher/: custom_task_images.rst  dynamic_workflows.rst  fast_prototyping.rst  full_example.rst  gotchas.rst  hydra.rst  hydra_and_flyte.rst  hydra_flyte_launcher.rst  introduction.rst  notifications.rst  wandb_integration.rst  workflow_cronjobs.rst
docs/usage/ml_pipelines/: advanced.rst  deployment.rst  flyte_launcher.rst  full_example.rst  gotchas.rst  index.rst  integrations.rst  quickstart.rst
docs/usage/subpackages/: aim_utils.rst  artifact_manager.rst  catalog.rst  entrypoints.rst  hydra.rst  iterstream.rst  langfuse_utils.rst  plotting.rst  secrets_plugins.rst
infrastructure/docker/: Dockerfile
src/hydra_plugins/aws_secrets_plugin/: README.md  __init__.py  aws_secrets_plugin.py
src/hydra_plugins/azure_secrets_plugin/: README.md  __init__.py  azure_secrets_plugin.py
src/hydra_plugins/flyte_launcher_plugin/: __init__.py  _flyte_launcher.py
src/hydra_plugins/gcp_secrets_plugin/: README.md  __init__.py  gcp_secrets_plugin.py
src/scaffold/: config_masking.py  constants.py  ctx_manager.py  plotting.py
src/scaffold/aim_utils/: __init__.py  core.py  fsspec_artifact_storage.py
src/scaffold/conf/: __init__.py
src/scaffold/conf/scaffold/: artifact_manager.py  ctx_manager.py  flyte_launcher.py
src/scaffold/conf/scaffold/entrypoint/: __init__.py
src/scaffold/conf/scaffold/lightning/: callbacks.py
src/scaffold/data/artifact_manager/: artifact_id_manager.py  artifact_logger.py  base.py  filesystem.py  wandb.py
src/scaffold/data/catalog/: __init__.py  artifact.py  catalog.py  dataloader.py  dataproduct.py  dataset.py  memorycatalog.py  meta.py  versioned_dataset.py
src/scaffold/data/iterstream/: base.py  iterators.py
src/scaffold/entrypoints/: entrypoint.py
src/scaffold/flyte/: __init__.py  core.py  flyte_utils.py  image_builder.py  launcher_conf.py
src/scaffold/hydra/: compose.py  config_helpers.py  initialize.py
src/scaffold/hydra_zen/: pydantic_sanitizer.py
src/scaffold/integration_test/: helpers.py
src/scaffold/langfuse/: tracing.py
src/scaffold/langfuse_utils/: __init__.py  scoring.py  tracing.py
src/scaffold/torch/lightning/: callbacks.py
src/scaffold/wandb/: helpers.py
test/: conftest.py
test/docs_examples/: test_entry_point_examples.py  test_launcher_examples.py
test/docs_examples/snippets/: entrypoint.py  entrypoint_context.py  execute_registered_workflows.py  full_example.py  launcher_conf.py  main.py  main_hydra.py  main_hydra_flyte.py  main_hydra_flyte_dynamic.py  main_hydra_flyte_extra_inputs.py  main_hydra_flyte_two_tasks.py  main_hydra_from_package.py  main_hydra_group.py  quickstart.py
test/docs_examples/snippets/conf/: entrypoint_conf.yaml  entrypoint_context_conf.yaml  main_hydra_flyte_dynamic_conf.yaml  main_hydra_flyte_multiple_inputs.yaml  main_hydra_flyte_two_tasks_conf.yaml  main_hydra_from_package.yaml  main_hydra_group.yaml
test/docs_examples/snippets/conf/hyperopt/: generics_config.yaml  optimiser_config.yaml  sampler_pruner_config.yaml  search_space_config.yaml  search_space_python.yaml
test/docs_examples/snippets/hyperopt/: custom_search_space.py  manual_logging.py  starting_workflow.py  task_optimisation.py  workflow_optimisation.py
test/hydra_plugins/: __init__.py  test_resolvers.py
test/scaffold/: test_config_masking.py  test_ctx_manager.py  test_plotting.py  test_system_monitor.py
test/scaffold/aim_utils/: test_fsspec_artifact_storage.py
test/scaffold/conf/: test_entrypoint_config.yaml  test_entrypoint_config_with_contexts.yaml
test/scaffold/conf/contexts/: my_contexts.yaml
test/scaffold/data/artifact_manager/: test_fs_logging.py  test_model_logger.py  wandb_script.py
test/scaffold/data/catalog/: test_artifact.py  test_catalog.py  test_dataset.py  test_versioned_dataset.py
test/scaffold/data/iterstream/: test_get_size.py  test_stream.py
test/scaffold/entrypoints/: test_entrypoint.py
test/scaffold/flyte/: test_flyte_inputs.py  test_flyte_plugins.py  test_flyte_register.py  test_flyte_utils.py  test_launchplan_masking.py
test/scaffold/flyte/dummy_modules/: flyte_entity_module.py  invalid_module.py  legacy_module.py  plugin_module.py  sub_module.py  sub_sub_module.py  valid_module.py
test/scaffold/hydra/: test_compose.py  test_initialize.py
test/scaffold/langfuse_utils/: test_metrics.py  test_scoring.py  test_tracing.py
test/scaffold/plugins/: dummy_main.py  test_hydra_plugins.py
test/scaffold/torch/lightning/: test_pl_callbacks.py
